Namen hinzugefügt. 	modified:   README

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Git-Repo mit den Java-Programmierkurs-Uebungsaufgaben (Uni Stuttgart WS10/11), GPL:
-Copyright (C) 2010  Andre E. pse@dywisor.de und weitere
+Copyright (C) 2010  Andre E. pse@dywisor.de, Felix Beifu§ und Andreas Boesen
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
